--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ h1{
     font-size: 25px;
 }
 .color{
-    color: #00a8ff;
-}
+    color: #00a8ff; } #textcolor{color: #646464; font-size: medium; font-family: lato;} 
+    #ab{font-family: roboto slab; color: #2f3640;font-size:15px;}
+    
+    .half-width{width: 40%; float: left;margin: 5%;padding: ;} .half-width img{ width:400px;}
 
